made some basic static pages with bootstrap

--- a/templates/home.page.tmpl
+++ b/templates/home.page.tmpl
@@ -6,6 +6,9 @@
             <div class="col">
                 <h1>This is the home page</h1>
                 <a href="/about">About</a>
+
+                <img src="/static/images/house.webp" alt="house" width="300" height="300">
+
             </div>
         </div>
     </div>
